--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     @* esta linha de comentário é do RAZOR : não é visível no browser  *@
     <input type="hidden" name="primeiroOperando" value="@ViewBag.PrimeiroOperando" />
     <input type="hidden" name="operador" value="@ViewBag.Operador" />
-
+    <input type="hidden" name ="limpaEcra" value="@ViewBag.LimpaEcra" />
 
 
   <table border="0"
